test/parser/closure-comprehensive-print.b3.expect
Error:
76:     %empty: int
        ^
expected ':='

